--- a/src/pages/portfolio/Header.css
+++ b/src/pages/portfolio/Header.css
@@ -1,10 +1,10 @@
-.header3 {
+header {
   margin:0 auto;
   text-align: center;
   padding-top: 300px;
 }
 
-.header3 h1 {
+header h1 {
   margin: 0;
   font-size: 4rem;
   color: #fff;
@@ -12,14 +12,14 @@
   margin-right: 100px;
 }
 
-.header3 p {
+header p {
   font-weight: 700;
   font-size: 1.75rem;
   color: #fff;
   margin-bottom: 30px;
 }
 
-.header3 a {
+header a {
   box-shadow: 0 3px 3px 0 rgb(0,0,0,.1);
   font-weight: 700;
   background-color: rgb(46, 22, 7);
@@ -29,4 +29,11 @@
   text-decoration: none;
   border-radius: .25rem;
   display: inline-block;
+}
+
+header img {
+  width: 300px;
+  height: 300px;
+  display: inline-block;
+  border-radius: 50%;
 }
